Reupload entire project